--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "mahjong-points",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
